--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/03/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 12)</b><br>Region of origin: <b>Kenya</b><br>Cause of death: <b>stowaway, killed by airplane wheels on flight from Nairobi (KE) to London (GB)</b><br>Source: CARF/GuardianUn/IRR<br>
+Found dead: <b>15/01/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Gambia, Senegal</b><br>Cause of death: <b>stowaway, froze in undercarriage of airplane travelling from Gambia to Brussels (BE)</b><br>Source: AngolaPress/MNS/PICUM/Vivre<br>
 
 <br>
 
