--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/07/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Muhammad Shukat (man, 47)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>died from heart attack after medical neglect in Colnbrook removal centre, Harmondsworth (GB)</b><br>Source: GuardianUn.<br>
+Found dead: <b>06/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Talaat Abdulhamid (man, 36)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of hypothermia after walking for 2 days through mountains near Turkish-Bulgarian border</b><br>Source: Independent<br>
 
 <br>
 
