--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 24)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>froze to death in the Belles Mountains on Bulgarian-Greek border while trying to enter Greece</b><br>Source: MNS<br>
+Found dead: <b>26/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of exhaustion after being rescued, was trying to swim from Morocco to the Spanish enclave of Ceuta (ES)</b><br>Source: EPress<br>
 
 <br>
 
