--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/07/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat capsized off coast of Malta</b><br>Source: PICUM/FE/TOM/NOB<br>
+Found dead: <b>29/03/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>shot dead by Greek border control while entering from Albania</b><br>Source: Trouw<br>
 
 <br>
 
