--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after dinghy sank near Bodrum (TR); 5 rescued</b><br>Source: Imkander<br>
+Found dead: <b>10/10/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shaukat Ali (man, 61)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself at his home in Birkby (GB) after asylum claim was rejected</b><br>Source: HEXAM/IRR<br>
 
 <br>
 
