--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/03</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned during shipwreck in bay of Cádiz (ES), bodies washed ashore</b><br>Source: ST/MNS/Indymedia/VK/AP/GuardianUn./Trouw<br>
+Found dead: <b>19/05/12</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned after boat carrying 43 migrants sank off coast of Mayotte (FR)</b><br>Source: Le Monde/AFP/Migreurop<br>
 
 <br>
 
