--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after boat capsized off Fuerteventura, body found in Lobos (ES) 2 weeks later</b><br>Source: MNS/MUGAK<br>
+Found dead: <b>15/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>hit by freight train near the Channel Tunnel in Calais (FR) while trying to reach Great Britain</b><br>Source: Parisien/Lacote<br>
 
 <br>
 
