--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>died during arson attack on refugee centre in Kaltenkirchen (DE)</b><br>Source: CARF/ZAG<br>
+Found dead: <b>19/07/14</b><br>Number of person: <b>151</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria, Pakistan, Nigeria</b><br>Cause of death: <b>reportedly murdered on overcrowded vessel in the Mediterranean Sea on way to Italy</b><br>Source: IOM/UNHCR/NRC/GuardianUn./Independent/MNS<br>
 
 <br>
 
