--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/08/10</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>2 drowned while travelling from Algeria, found by sea patrol near Alicante (ES); 6 missing</b><br>Source: Les Temps d'Algerie/Migreurop<br>
+Found dead: <b>18/02/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, fell from train in the Channel Tunnel (GB/FR)</b><br>Source: AP/MNS/IRR<br>
 
 <br>
 
