--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/03/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after raft carrying Afghan and Iranian migrants to Lesbos (GR) sank off coast of Turkey</b><br>Source: AFP/DHA<br>
+Found dead: <b>19/09/04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned near Algeciras (ES) after shipwreck of boat carrying another 36 migrants</b><br>Source: Afrology<br>
 
 <br>
 
