--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/01/95</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>stowaways, found poisoned by pesticides in cargo ship in St. Malo (FR)</b><br>Source: CARF/MNS<br>
+Found dead: <b>12/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>found dead while in detention at police station in Málaga (ES)</b><br>Source: MUGAK<br>
 
 <br>
 
