--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/12/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>found dead while in detention at police station in Málaga (ES)</b><br>Source: MUGAK<br>
+Found dead: <b>29/04/16</b><br>Number of person: <b>84</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>West Africa</b><br>Cause of death: <b>reportedly missing after ship travelling to Italy sank off coast of Libya</b><br>Source: AFP/IOM/Libération Maroc<br>
 
 <br>
 
