--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/06/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N (woman, 30)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>found dead in police cell after being detained in Zurich Airport (CH) for not having papers</b><br>Source: Migreurop/AP<br>
+Found dead: <b>20/05/13</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized off coast of Morocco on way to Spain; 7 rescued</b><br>Source: MNS/TheLocal<br>
 
 <br>
 
