--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/06/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Alex Darkwah Oppong (man, 41)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>jumped out of window of asylum centre in Klagenfurt, Carinthia (AT) during fire</b><br>Source: Falter<br>
+Found dead: <b>19/01/05</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on boat drifting 480 km south of Canary Islands (ES)</b><br>Source: PICUM/PAJOL/MAG/APDHA/MNS/NOB<br>
 
 <br>
 
