--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died from blow to head near Pozzallo (IT) while being forced to board boat</b><br>Source: Ansamed<br>
+Found dead: <b>02/08/06</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>China</b><br>Cause of death: <b>died in car accident trying to escape police in Germany after being smuggled from Czech Republic</b><br>Source: Berliner Ztg/MOZ/Tagesspiegel<br>
 
 <br>
 
