--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/08/06</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>China</b><br>Cause of death: <b>died in car accident trying to escape police in Germany after being smuggled from Czech Republic</b><br>Source: Berliner Ztg/MOZ/Tagesspiegel<br>
+Found dead: <b>06/12/98</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>drowned near Malta while travelling to Italy, reportedly thrown into the sea by smugglers</b><br>Source: AP/MNS<br>
 
 <br>
 
