--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/07/14</b><br>Number of person: <b>60</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>went missing after ship sank off coast of Libya; 62 rescued</b><br>Source: LAInfo<br>
+Found dead: <b>03/06/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N (woman, 30)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>found dead in police cell after being detained in Zurich Airport (CH) for not having papers</b><br>Source: Migreurop/AP<br>
 
 <br>
 
