--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/06/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N (woman, 30)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>found dead in police cell after being detained in Zurich Airport (CH) for not having papers</b><br>Source: Migreurop/AP<br>
+Found dead: <b>02/04/16</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>shot by Libyan guards while trying to escape detention centre in Zawiya (LY); 20 injured</b><br>Source: MigrantReport<br>
 
 <br>
 
