--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/10/08</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan, Myanmar</b><br>Cause of death: <b>stowaways, died from asphyxiation after traffic accident in truck heading from Istanbul (TR) to Greece</b><br>Source: Picum/Nt7/TodZam/NOB<br>
+Found dead: <b>28/01/16</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>went missing after boat travelling from Turkey to Greece capsized off Samos (GR)</b><br>Source: Reu./RTE/IOM/CNN<br>
 
 <br>
 
