--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/11/15</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died in a fire in camp for African migrants in Algeria</b><br>Source: AFP/BBC<br>
+Found dead: <b>15/07/01</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after vessel collided with rocks near Tarifa (ES) while attempting to escape police</b><br>Source: MNS/ODP<br>
 
 <br>
 
