--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Azerbaijan</b><br>Cause of death: <b>stowaway, found in Gatwick Airport (GB) in undercarriage of airplane from Baku (AZ) to London (GB)</b><br>Source: IRR<br>
+Found dead: <b>12/03/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jasminka (girl, 11)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>died during arson attack against her Roma family in refugee centre in Humboldt-Gremberg (DE)</b><br>Source: ARI/ZAG<br>
 
 <br>
 
