--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lofti Al Swaee (man, 32)</b><br>Region of origin: <b>Libya</b><br>Cause of death: <b>died in a fire at detention centre at Schiphol, Amsterdam Airport (NL)</b><br>Source: LR/MAG/MNS/ST/VK/Vivre/ASKV/FE/PICUM/NRC<br>
+Found dead: <b>04/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hassane Traoré (man, twin, 28)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>drowned when small wooden boat capsized off coast of the Spanish enclave of Melilla (ES); 1 survivor</b><br>Source: PRI/PrivateSource/BBC/El Diario/Caminando/IOM<br>
 
 <br>
 
