--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammed Ayaz (man, 21)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>stowaway, fell into car park in Richmond (GB) from wheel bay of airplane travelling from Bahrain</b><br>Source: OBV/IRR<br>
+Found dead: <b>27/06/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mustafa Alcali (man, 30)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, hanged himself in custody in Frankfurt (DE) after learning he would be deported</b><br>Source: FL/jW/IRR<br>
 
 <br>
 
