--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/09/12</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after boat sank off coast of Lampedusa (IT); 56 rescued</b><br>Source: PICUM/MAS/LRP/FE/BCC/CNN<br>
+Found dead: <b>2017</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Basheer (boy, 18)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died trying to swim across the Evros River from Turkey to Greece</b><br>Source: ICRC<br>
 
 <br>
 
