--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 00</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>drowned in the Sava River on Bosnian-Hungarian border trying to travel to Western Europe</b><br>Source: MNS<br>
+Found dead: <b>16/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, jumped from boat in the Strait of Gibraltar and hit his head, detected on way from Morocco to Spain</b><br>Source: MNS<br>
 
 <br>
 
