--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, jumped from boat in the Strait of Gibraltar and hit his head, detected on way from Morocco to Spain</b><br>Source: MNS<br>
+Found dead: <b>20/02/02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned while trying to swim from Morocco to the Spanish enclave of Melilla (ES)</b><br>Source: MNS/MUGAK<br>
 
 <br>
 
