--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/02/02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned while trying to swim from Morocco to the Spanish enclave of Melilla (ES)</b><br>Source: MNS/MUGAK<br>
+Found dead: <b>30/01/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 31)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>suicide, hanged himself in his prison cell in Witzwil (CH) out of fear of deportation</b><br>Source: Vivre/Polbe<br>
 
 <br>
 
