--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/04/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Eliud Nguli Nyenze (man, 40)</b><br>Region of origin: <b>Kenya</b><br>Cause of death: <b>died after being denied medical attention at Oakington immigration reception centre (GB)</b><br>Source: GuardianUn./IndyMedia/MornStar/IRR<br>
+Found dead: <b>01/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>killed after car chase in Evros (GR) involving Greek border police and Frontex officials</b><br>Source: MNS/PICUM<br>
 
 <br>
 
