--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/03/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Tisza River near Subotica (RS) near Hungarian-Serbian border</b><br>Source: IOM Bulgaria<br>
+Found dead: <b>05/07/12</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after shipwreck near Monastir (TN) while travelling to Italy; 22 rescued</b><br>Source: TNnum<br>
 
 <br>
 
