--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 07</b><br>Number of person: <b>57</b><br>Name, gender, age: <b>N.N. (57 men)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned in shipwreck while travelling from Alexandria (EG) to Italy</b><br>Source: LAT<br>
+Found dead: <b>31/12/09</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>reportedly drowned after boat from Turkey shipwrecked off coast of Alexandroupoli (GR)</b><br>Source: FE/Migreurop/AP/Le Figaro/ANSA/Unita’/TodZam<br>
 
 <br>
 
